# os_studey

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ProdConsService2.qml  compile_commands.json  demo.qml  main.cpp  main.qml  mainwindow.qml  mybox.qml  option.h.in  test.cpp  test2.qml
googletest/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
googletest/googletest/include/gtest/internal/custom/: README.md
qml/: DynamicAlloc.qml  FastBlur.qml  ProdconsService.qml  Request.qml  mainwindow.qml  mybox.qml  qml01.qml  qml02.qml  qml03.qml  qml04.qml
qml/shader/: heart.frag  lighting.frag  mask.frag  shader.frag  shader.vert  shader1.frag
src/: DynamicAlloc.cpp  Filewatcher.cpp  MemAllocator2.cpp  MemoryAllocator.cpp  MemoryPool.cpp  MemoryPool.h  ProdConsService.cpp  ProdConsService2.cpp  TaskManager.cpp
src/header/: Filewatcher.h  ProducerConsumer.h
src/include/: CycleQueue.h  DynamicAlloc.h  PC.h  ProdConsService.h  ProdConsService2.h  TaskManager.h
src/malloc/: memlib.c  memlib.cpp  mm.c  mm.cpp
temp/: tmp01.cpp
test/: Test.cpp
